fixes agile bio alignment

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ ul {
 
  a{
   color: #2afeb7;
-  text-shadow: 2px 1px 2px black;  
+  text-shadow: 2px 1px 2px black;
 }
 
 
@@ -258,7 +258,7 @@ ul {
 }
 
 .parallax-2 .landscape {
-  max-height: 50%;
+  max-height: 55%;
   width: auto;
 }
 
